# cursor_automation

./: .gitignore  README.md  requirements.txt
servers/: MCP_SETUP_GUIDE.md  README.md
servers/build_with_telegram/: telegram_server.py
servers/execution-mcp/: .gitignore  INTERRUPTION_HANDLING.md  instruction_executor.py  instructions.json  pyproject.toml  rule.md  test_interruption_handling.py  test_paths.py
